Fixed vision bug. Changed to ngDraggable. Can't drag on mobile.

--- a/app/app.css
+++ b/app/app.css
@@ -1,59 +1,63 @@
 /* app css stylesheet */
 
 .menu {
-  list-style: none;
-  border-bottom: 0.1em solid black;
-  margin-bottom: 2em;
-  padding: 0 0 0.5em;
+    list-style: none;
+    border-bottom: 0.1em solid black;
+    margin-bottom: 2em;
+    padding: 0 0 0.5em;
 }
 
 .menu:before {
-  content: "[";
+    content: "[";
 }
 
 .menu:after {
-  content: "]";
+    content: "]";
 }
 
 .menu > li {
-  display: inline;
+    display: inline;
 }
 
 .menu > li:before {
-  content: "|";
-  padding-right: 0.3em;
+    content: "|";
+    padding-right: 0.3em;
 }
 
 .menu > li:nth-child(1):before {
-  content: "";
-  padding: 0;
+    content: "";
+    padding: 0;
 }
 
 #gameBoard table,
 #gameBoard td {
-  border-collapse:collapse;
-  border:1px solid black;
+    border-collapse: collapse;
+    border: 1px solid black;
 }
 
 #gameBoard td {
-  width: 20px;
-  height: 20px;
-  overflow: visible;
-  font-size: small;
+    width: 20px;
+    height: 20px;
+    overflow: visible;
+    font-size: small;
 }
 
 #gameBoard thead td {
-  text-align: center;
+    text-align: center;
 }
 
 .wall {
-  background: black;
+    background: black;
 }
 
 .street {
-  background: gray;
+    background: gray;
 }
 
 .vision {
-  background: blue;
+    background: blue;
+}
+
+[ng-drag] {
+    cursor: move;
 }
